xml/src1/objects/Global_App_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Store default values for determining runtime behavior.</description>
    <fields>
        <fullName>Developers_Chatter_Group_Default_Member__c</fullName>
        <defaultValue>&quot;rassad.sfadmin@gbhem.org.rocky&quot;</defaultValue>
        <description>The default users email address used to query the user name in this org.</description>
        <inlineHelpText>The default users email address used to query the user name in this org.</inlineHelpText>
        <label>Developers Chatter Group Default Member</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developers_Chatter_Group_Name__c</fullName>
        <defaultValue>&quot;Developers&quot;</defaultValue>
        <description>The name of the chatter group that developers are added to so that they receive system errors as they occur.</description>
        <inlineHelpText>The name of the chatter group that developers are added to so that they receive system errors as they occur.</inlineHelpText>
        <label>Developers Chatter Group Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_Record_Errors_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stops record errors from being posted to the record owners via chatter.</description>
        <inlineHelpText>Stops record errors from being posted to the record owners via chatter.</inlineHelpText>
        <label>Suppress Record Errors to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_System_Errors_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stops system errors from being posted to the developers chatter group.</description>
        <inlineHelpText>Stops system errors from being posted to the developers chatter group.</inlineHelpText>
        <label>Suppress System Errors to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <label>Global App Settings</label>
</CustomObject>